syntax = "proto3";

package auth;

option go_package = "styx/proto";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse);
  rpc GetUserDetails(GetUserDetailsRequest) returns (GetUserDetailsResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string project_id = 3;
}

message RegisterResponse {
  string user_id = 1;
  string session_token = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  string session_token = 2;
}

message ValidateSessionRequest {
  string session_token = 1;
}

message ValidateSessionResponse {
  string user_id = 1;
  bool valid = 2;
  repeated string project_ids = 3;
}

message GetUserDetailsRequest {
  string user_id = 1;
}

message GetUserDetailsResponse {
  string user_id = 1;
  string email = 2;
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  string status = 1;
  string message = 2;
}
